[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Ion OH"]
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
strip = "debuginfo"
split-debuginfo = "packed"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
split-debuginfo = "packed"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
split-debuginfo = "packed"

[workspace.dependencies]
bevy = { version = "0.16" }
log = { version = "*" }
