[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Ion OH"]
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
strip = "debuginfo"
split-debuginfo = "packed"
incremental = false

[profile.dev.package."*"]
opt-level = 3
strip = "symbols"
split-debuginfo = "packed"
incremental = false

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
split-debuginfo = "packed"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "symbols"
split-debuginfo = "packed"

[workspace.dependencies]
app = { path = "crates/app" }
bevy = { version = "0.17" }
configure = { path = "crates/configure" }
fps_counter = { path = "crates/fps_counter" }
igo_core = { git = "https://github.com/ion0658/igo-rs", branch = "master" }
log = { version = "*" }
rand = { version = "0" }
serde = { version = "1" }
