[package]
name = "my_rougue"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true }
fps_counter = { workspace = true }
igo_core = { workspace = true }
log = { workspace = true, features = [
    "release_max_level_info",
    "max_level_trace",
] }
rand = { workspace = true }

[[bin]]
name = "igo_app"
path = "src/bin/main.rs"
